libqt6c/src/libqstringlistmodel.hpp

typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QObject QObject;
typedef struct QStringListModel QStringListModel;
typedef struct QVariant QVariant;
QStringListModel* QStringListModel_new();
QStringListModel* QStringListModel_new2(const QStringList* strings);
QStringListModel* QStringListModel_new3(QObject* parent);
QStringListModel* QStringListModel_new4(const QStringList* strings, QObject* parent);
QMetaObject* QStringListModel_MetaObject(const QStringListModel* self);
int QStringListModel_RowCount(const QStringListModel* self, const QModelIndex* parent);
QModelIndex* QStringListModel_Sibling(const QStringListModel* self, int row, int column, const QModelIndex* idx);
QVariant* QStringListModel_Data(const QStringListModel* self, const QModelIndex* index, int role);
bool QStringListModel_SetData(QStringListModel* self, const QModelIndex* index, const QVariant* value, int role);
bool QStringListModel_ClearItemData(QStringListModel* self, const QModelIndex* index);
int QStringListModel_Flags(const QStringListModel* self, const QModelIndex* index);
bool QStringListModel_InsertRows(QStringListModel* self, int row, int count, const QModelIndex* parent);
bool QStringListModel_RemoveRows(QStringListModel* self, int row, int count, const QModelIndex* parent);
bool QStringListModel_MoveRows(QStringListModel* self, const QModelIndex* sourceParent, int sourceRow, int count, const QModelIndex* destinationParent, int destinationChild);
libqt_map /* of int to QVariant* */ QStringListModel_ItemData(const QStringListModel* self, const QModelIndex* index);
bool QStringListModel_SetItemData(QStringListModel* self, const QModelIndex* index, const libqt_map /* of int to QVariant* */ roles);
void QStringListModel_Sort(QStringListModel* self, int column, int order);
QStringList QStringListModel_StringList(const QStringListModel* self);
void QStringListModel_SetStringList(QStringListModel* self, const QStringList* strings);
int QStringListModel_SupportedDropActions(const QStringListModel* self);
void QStringListModel_Delete(QStringListModel* self);